syntax = "proto3";

package proto.user;

import "google/api/annotations.proto";
import "protoc-gen-swagger/options/annotations.proto";

option go_package = "github.com/goml/gomlet/proto/v1/user";

/////////////////////////////////////////////////////////////
// Request-Response

// GetUsers
message GetUsersRequest {
}

message GetUsersResponse {
    repeated User users = 1;
}

// ModifyUser
message ModifyUserRequest {
    User user = 1;
}

// DeleteUser
message DeleteUserRequest {
    string user_id = 1;
}

/////////////////////////////////////////////////////////////
// Common

// UserModel ...
message User {
	string user_id = 1;
	string password = 2;
	string name = 3;
	int32 role = 4;
	repeated string ssh_keys = 5;
}
